# a-stock-i-investment

./: .env.example  .gitignore  A股投资分析决策Skill套件开发文档.md  README.md  pyproject.toml
config/: company_tags.yaml  industry_chains.yaml  risk_rules.yaml  supply_chain_relations.yaml  user_profile.yaml  watchlist.yaml
scripts/: install_skill.sh
skills/a-stock-daily-workflow/: SKILL.md
skills/a-stock-industry-research/: SKILL.md
skills/a-stock-investment/: SKILL.md
skills/a-stock-portfolio-risk/: SKILL.md
skills/a-stock-stock-analysis/: SKILL.md
skills/a-stock-trade-review/: SKILL.md
stock_assistant/: cache.py  cli.py  config_loader.py  data_gateway.py  data_health.py  models.py  utils.py
stock_assistant/analyzers/: announcement.py  capital_flow.py  fundamental.py  industry_chain.py  market_regime.py  market_sentiment.py  risk.py  sector_rotation.py  technical.py  valuation.py
stock_assistant/data_sources/: adapters.py  catalog.py
stock_assistant/decision/: decision_engine.py  position_sizer.py
stock_assistant/knowledge/: enrichment.py  evidence_store.py  extractor.py  graph_builder.py  knowledge_store.py
stock_assistant/providers/: astock_data.py
stock_assistant/storage/: journal_store.py
stock_assistant/workflows/: deep_dive.py  industry_research.py  (+5 more)
tests/: test_analysis_workflow.py  test_astock_data_provider.py  test_cli_extended_workflows.py  test_configurable_rules.py  test_data_health.py  test_data_source_adapters.py  test_dynamic_knowledge.py  test_gateway.py  test_knowledge_graph.py  test_live_gateway.py  test_standard_analyzers.py
(+1 files in other folders)
